Correct errors in the navBar, SpaceType and Benefits, in addition to typing the components

--- a/apps/jackbnb-fe/src/components/SpaceType/index.module.css
+++ b/apps/jackbnb-fe/src/components/SpaceType/index.module.css
@@ -1,8 +1,14 @@
+
+.myContainer_item{
+  overflow-x:hidden;
+}
+
 .myContainer {
-    min-width: 100%;
-    width: auto;
-    display:flex;
+    display:grid;
+    grid-template-columns:repeat(5,121px);
+    width:98%;
+    grid-gap:10px;
     overflow-x: scroll;
-    margin-left:15px ;
+    margin-left: 15px;
   }
   
