Improving SocialButton component

--- a/apps/jackbnb-fe/src/components/SocialButton/index.module.css
+++ b/apps/jackbnb-fe/src/components/SocialButton/index.module.css
@@ -1,10 +1,12 @@
-.myContainer {
+.socialButtonContainer {
   display: flex;
   justify-content: center;
 }
-.list{
+
+.buttonList{
     list-style: none;
 }
-.listItems {
+
+.buttonItem {
     margin-top: 21px;
   }
