--- a/apps/jackbnb-fe/src/components/Footer/index.module.css
+++ b/apps/jackbnb-fe/src/components/Footer/index.module.css
@@ -1,16 +1,40 @@
+@import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
+
 .container{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: rgb(248, 245, 245);
+    width: 400px;
+    height: 800px;
+    padding: 10px;
 }
 
-h1{
-    color: black;
-    font-size: 1px;
+.Title{
+  margin: 15px;
+  color: rgb(17, 63, 23);
+  font-size: 25px;
+  font-family: 'Lexend Deca', sans-serif;
+  align-self: flex-start;
 }
 
-h2{
-    color: rgb(156, 145, 145); 
+
+.h1{
+    margin-top: 30px;
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+    margin: 5px;
+    font-family: 'cobin', 'sans serif';
+    align-self: flex-start;
+    margin-left: 15px;
+    margin-top: 20px;
+}
+
+.h2{
+    color: rgb(156, 145, 145);
     font-size: 16px;
+    align-self: flex-start;
+    margin-left: 15px;
 }
