--- a/apps/jackbnb-fe/src/components/Form/index.module.css
+++ b/apps/jackbnb-fe/src/components/Form/index.module.css
@@ -7,6 +7,9 @@
 
 
 .form{
-    border-radius: 5px;
-    border: solid rgb(5, 230, 144);
+    border-radius: 10px;
+    border: solid rgb(4, 196, 4);
+    width: 150px;
+    height: 50px;
+    margin: 10px;
 }
