--- a/apps/jackbnb-fe/src/components/Footer/index.module.css
+++ b/apps/jackbnb-fe/src/components/Footer/index.module.css
@@ -1,7 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
 
-.container{
+.container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,7 +10,7 @@
     padding: 10px;
 }
 
-.Title{
+.Title {
   margin: 15px;
   color: rgb(17, 63, 23);
   font-size: 25px;
@@ -21,18 +19,18 @@
 }
 
 
-.h1{
+.h1 {
     margin-top: 30px;
     color: rgb(0, 0, 0);
     font-size: 20px;
     margin: 5px;
-    font-family: 'cobin', 'sans serif';
+    font-family: 'Cabin', 'sans serif';
     align-self: flex-start;
     margin-left: 15px;
     margin-top: 20px;
 }
 
-.h2{
+.h2 {
     color: rgb(156, 145, 145);
     font-size: 16px;
     align-self: flex-start;
