--- a/apps/jackbnb-fe/src/components/Footer/index.module.css
+++ b/apps/jackbnb-fe/src/components/Footer/index.module.css
@@ -1,13 +1,12 @@
-
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(248, 245, 245);
-    width: 400px;
-    height: 800px;
-    padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(248, 245, 245);
+  width: 400px;
+  height: 800px;
+  padding: 10px;
 }
 
 .Title {
@@ -18,21 +17,17 @@
   align-self: flex-start;
 }
 
-
 .h1 {
-    margin-top: 30px;
-    color: rgb(0, 0, 0);
-    font-size: 20px;
-    margin: 5px;
-    font-family: 'Cabin', 'sans serif';
-    align-self: flex-start;
-    margin-left: 15px;
-    margin-top: 20px;
+  color: rgb(0, 0, 0);
+  font-size: 20px;
+  font-family: 'Cabin', sans-serif;
+  align-self: flex-start;
+  margin: 20px 5px 5px 15px;
 }
 
 .h2 {
-    color: rgb(156, 145, 145);
-    font-size: 16px;
-    align-self: flex-start;
-    margin-left: 15px;
+  color: rgb(156, 145, 145);
+  font-size: 16px;
+  align-self: flex-start;
+  margin-left: 15px;
 }
