--- a/apps/jackbnb-fe/src/components/Footer/index.module.css
+++ b/apps/jackbnb-fe/src/components/Footer/index.module.css
@@ -1,23 +1,18 @@
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: rgb(248, 245, 245);
-  width: 400px;
-  height: 800px;
-  padding: 10px;
+  background-color: #F0F0F0;
+  margin-top: 48px;
 }
 
 .Title {
-  margin: 15px;
-  color: rgb(17, 63, 23);
-  font-size: 25px;
-  font-family: 'Lexend Deca', sans-serif;
-  align-self: flex-start;
+  margin-top: 32px;
+  font-size: 22px;
+  text-align: center;
+  color: #136262;
 }
 
-.h1 {
+.h4 {
   color: rgb(0, 0, 0);
   font-size: 20px;
   font-family: 'Cabin', sans-serif;
@@ -25,9 +20,14 @@
   margin: 20px 5px 5px 15px;
 }
 
-.h2 {
+.h5 {
   color: rgb(156, 145, 145);
   font-size: 16px;
   align-self: flex-start;
   margin-left: 15px;
+}
+
+.footerLogo {
+  align-self: center;
+  margin: 48px 0;
 }
