--- a/apps/jackbnb-fe/src/components/Form/index.module.css
+++ b/apps/jackbnb-fe/src/components/Form/index.module.css
@@ -1,15 +1,18 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 10px;
 }
 
-
 .form {
-    border-radius: 10px;
-    border: solid rgb(4, 196, 4);
-    width: 150px;
-    height: 50px;
-    margin: 10px;
+  border-radius: 15px;
+  border: 1px solid #1CA698;
+  height: 44px;
+  margin: 10px 0;
+  width: 100%;
+  padding: 10px;
+  background: transparent;
+  outline: none;
 }
