--- a/apps/jackbnb-fe/src/templates/Login/index.module.css
+++ b/apps/jackbnb-fe/src/templates/Login/index.module.css
@@ -1,3 +1,7 @@
 .container {
-background-image: linear-gradient(180deg, #ffffaf 0, #ffffa6 25%, #f2f29d 50%, #d7dd94 75%, #bfca8b 100%);
+  background-color: white;
+  margin: 0;
+  display: flex;
+  text-align: center;
 }
+
