--- a/apps/jackbnb-fe/src/components/Input/index.module.css
+++ b/apps/jackbnb-fe/src/components/Input/index.module.css
@@ -5,3 +5,8 @@
   text-align: center;
   flex-direction: column;
 }
+
+.input {
+  border-color: white;
+  box-shadow: 0px 13px 9px 5px rgba(203,255,4,0.31);
+}
