--- a/apps/jackbnb-fe/src/templates/Login/index.module.css
+++ b/apps/jackbnb-fe/src/templates/Login/index.module.css
@@ -3,5 +3,12 @@
   margin: 0;
   display: flex;
   text-align: center;
+  flex-direction: column;
+
 }
 
+.h1 {
+  color: gray;
+  font-size: 12px;
+  text-decoration: underline;
+}
